adds JS and CSS to create image carousel

--- a/index.html
+++ b/index.html
@@ -50,22 +50,47 @@
     </section>
 
     <br>
-    
-    <div class="back-button"></div>
 
-    <section id="portfolio">
-      <div class="portfolio-image-1"></div>
-      <div class="portfolio-image-2"></div>
-      <div class="portfolio-image-3"></div>
-      <div class="portfolio-image-4"></div>
-      <div class="portfolio-image-5"></div>
-      <div class="portfolio-image-6"></div>
-      <div class="portfolio-image-7"></div>
-      <div class="portfolio-image-8"></div>
-      <div class="portfolio-image-9"></div>
-    </section>
+    <div class="carousel-container">
+      <!-- <section id="portfolio"> -->
+        <div class="portfolio-image fade">
+          <img src="whittier-portfolio-image-1.jpg" style="width: 100%">
+        </div>
+        <div class="portfolio-image fade">
+          <img src="whittier-portfolio-image-2.jpg" style="width: 100%">
+        </div>
+        <div class="portfolio-image fade">
+          <img src="whittier-portfolio-image-3.jpg" style="width: 100%">
+        </div>
+        <div class="portfolio-image fade">
+          <img src="whittier-portfolio-image-4.jpg" style="width: 100%">
+        </div>
+        <div class="portfolio-image fade">
+          <img src="whittier-portfolio-image-5.jpg" style="width: 100%">
+        </div>
+        <div class="portfolio-image fade">
+          <img src="whittier-portfolio-image-6.jpg" style="width: 100%">
+        </div>
+        <div class="portfolio-image fade">
+          <img src="whittier-portfolio-image-7.jpg" style="width: 100%">
+        </div>
+      <!-- </section> -->
 
-    <div class="next-button"></div>
+      <a class="prev" onclick="plusSlides(-1)">&#10094</a>
+      <a class="next" onclick="plusSlides(1)">&#10095</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span>
+  <span class="dot" onclick="currentSlide(7)"></span>
+</div>
 
     <br>
 
@@ -105,5 +130,5 @@
   <p>Webpage Developed By Greg Lynn</p>
   </div>
 </footer>
-
+<script src="index.js"></script>
 </html>
