adds portfolio ID

--- a/index.html
+++ b/index.html
@@ -50,35 +50,35 @@
     </section>
 
     <br>
+      <section id="portfolio">
+        
+        <div class="carousel-container">
+          <div class="portfolio-image fade">
+            <img src="whittier-portfolio-image-1.jpg" style="width: 100%">
+          </div>
+          <div class="portfolio-image fade">
+            <img src="whittier-portfolio-image-2.jpg" style="width: 100%">
+          </div>
+          <div class="portfolio-image fade">
+            <img src="whittier-portfolio-image-3.jpg" style="width: 100%">
+          </div>
+          <div class="portfolio-image fade">
+            <img src="whittier-portfolio-image-4.jpg" style="width: 100%">
+          </div>
+          <div class="portfolio-image fade">
+            <img src="whittier-portfolio-image-5.jpg" style="width: 100%">
+          </div>
+          <div class="portfolio-image fade">
+            <img src="whittier-portfolio-image-6.jpg" style="width: 100%">
+          </div>
+          <div class="portfolio-image fade">
+            <img src="whittier-portfolio-image-7.jpg" style="width: 100%">
+          </div>
 
-    <div class="carousel-container">
-      <!-- <section id="portfolio"> -->
-        <div class="portfolio-image fade">
-          <img src="whittier-portfolio-image-1.jpg" style="width: 100%">
+          <a class="prev" onclick="plusSlides(-1)">&#10094</a>
+          <a class="next" onclick="plusSlides(1)">&#10095</a>
         </div>
-        <div class="portfolio-image fade">
-          <img src="whittier-portfolio-image-2.jpg" style="width: 100%">
-        </div>
-        <div class="portfolio-image fade">
-          <img src="whittier-portfolio-image-3.jpg" style="width: 100%">
-        </div>
-        <div class="portfolio-image fade">
-          <img src="whittier-portfolio-image-4.jpg" style="width: 100%">
-        </div>
-        <div class="portfolio-image fade">
-          <img src="whittier-portfolio-image-5.jpg" style="width: 100%">
-        </div>
-        <div class="portfolio-image fade">
-          <img src="whittier-portfolio-image-6.jpg" style="width: 100%">
-        </div>
-        <div class="portfolio-image fade">
-          <img src="whittier-portfolio-image-7.jpg" style="width: 100%">
-        </div>
-      <!-- </section> -->
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094</a>
-      <a class="next" onclick="plusSlides(1)">&#10095</a>
-    </div>
+      </section>
     <br>
 
     <!-- The dots/circles -->
