adds github link to footer

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <p>© Whittier WoodWorks</p>
   </div>
   <div class="greg">
-  <p>Webpage Developed By Greg Lynn</p>
+  <a href="https://github.com/greg-lynn"><p>Developed By Greg Lynn</p></a>
   </div>
 </footer>
 <script src="index.js"></script>
