updates about section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>We make a concerted effort to give back to our community by donating custom pieces to various charities, including: Brookes House, and Operation Second Chance.</p>
           </div>
           <div class="what">
-            <p>We focus our work primarily on custom pieces. However, we do have a few core pieces as well.</p>
+            <p>We focus our work primarily on custom pieces. However, we do have a few core pieces for sale as well. Please visit our contact section for sales inquiries.</p>
           </div>
         </div>
       </div>
