adds photos/updates responsiveness, updates HTML, updates JS

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 
   <main>
     <section id="about">
+      <div class="about-image">
+        <div class="about-image-name">
+          <!-- <h5>Whittier Law School</h5> -->
+        </div>
+      </div>
+      
+      <br>
+
       <div class='about-group'>
         <div class="about-title">
           <h2>About Us</h2>
@@ -37,14 +45,8 @@
             <p>We make a concerted effort to give back to our community by donating custom pieces to various charities, including: Brookes House, and Operation Second Chance.</p>
           </div>
           <div class="what">
-            <p>We focus our work primarily on custom pieces. However, we do have a few core pieces for sale as well. Please visit our contact section for sales inquiries.</p>
+            <p>We are known for our rustic and farmhouse style. We love doing custom pieces, however, we do have a few core pieces for sale. Please contact us for sales inquiries.</p>
           </div>
-        </div>
-      </div>
-
-      <div class="about-image">
-        <div class="about-image-name">
-          <!-- <h5>Whittier Law School</h5> -->
         </div>
       </div>
     </section>
@@ -63,7 +65,7 @@
             <img src="whittier-portfolio-image-3.jpg" style="width: 100%">
           </div>
           <div class="portfolio-image fade">
-            <img src="whittier-portfolio-image-4.jpg" style="width: 100%">
+            <img src="whittier-portfolio-image-4.jpeg" style="width: 100%">
           </div>
           <div class="portfolio-image fade">
             <img src="whittier-portfolio-image-5.jpg" style="width: 100%">
@@ -72,7 +74,7 @@
             <img src="whittier-portfolio-image-6.jpg" style="width: 100%">
           </div>
           <div class="portfolio-image fade">
-            <img src="whittier-portfolio-image-7.jpg" style="width: 100%">
+            <img src="whittier-portfolio-image-8.jpeg" style="width: 100%">
           </div>
 
           <a class="prev" onclick="plusSlides(-1)">&#10094</a>
@@ -110,10 +112,10 @@
         </div>
       </div>
       <div class="facebook">
-        <a href="https://www.facebook.com/whittierwoodworks/"><div class="facebook-icon"></div></a>
+        <a href="https://www.facebook.com/whittierwoodworks/" target="_blank"><div class="facebook-icon"></div></a>
         <div class="facebook-text">
           <h3>Check us out on Facebook</h3>
-          <a href="https://www.facebook.com/whittierwoodworks/">Whittier Wood Works</a>
+          <a href="https://www.facebook.com/whittierwoodworks/" target="_blank">Whittier Wood Works</a>
         </div>
       </div>
     </section>
